--- a/README.Rmd
+++ b/README.Rmd
@@ -21,14 +21,16 @@ RiboMethSeq is an RNAseq-based approach to analyze 2'O-ribose methylation (2'Ome
 
 rRMSAnalyzer is an R package that provides a set of easy-to-use functions to evaluate 2'Ome levels by computing C-scores from RiboMethSeq read end counts as input.
 
-Available features (version 2): 
+Available features (version 3): 
 
 - C-score computation (using either mean or median for the window of neighboring positions)
 - Batch effect adjustment with CombatSeq
 - Different visualizations to compare samples or sites
 - Include a table of annotated human rRNA sites 
-- Export computed C-scores into a dataframe 
-- Semi-automated quality control report
+- Export computed C-scores into a dataframe
+- Automated quality control report (quality_control.Rmd)
+- Automated analysis of 2'Ome global methylation profile  (2ome_analysis.Rmd)
+- Automated differential analysis of 2'ome methylation site (diff_sites.Rmd)
 
 > **Note** We have also developed a [dedicated Nextflow pipeline](https://github.com/RibosomeCRCL/ribomethseq-nf) to process the data from sequencing output (fastq files) to useful raw data for rRMSAnalyzer (read end counts).
 
